--- a/visits/docker-compose.yml
+++ b/visits/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3"
+version: '3'
 services:
   redis-server:
     image: 'redis'
   node-app:
     build: .
     ports:
-      - "3000:3000"
+      - '4001:3000'
